--- a/retro-calculator/Base.lproj/LaunchScreen.storyboard
+++ b/retro-calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,13 +16,59 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchbg" translatesAutoresizingMaskIntoConstraints="NO" id="oE0-Ph-XBf">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchground" translatesAutoresizingMaskIntoConstraints="NO" id="n4r-bd-Fff">
+                                <rect key="frame" x="0.0" y="471" width="600" height="129"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="129" id="MbN-Z3-nEe"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Retro-Calc" translatesAutoresizingMaskIntoConstraints="NO" id="jqc-sR-jCH">
+                                <rect key="frame" x="110" y="51" width="380" height="55"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="55" id="GAn-UJ-Jr1"/>
+                                    <constraint firstAttribute="width" constant="380" id="XIA-lH-J7J"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="robot" translatesAutoresizingMaskIntoConstraints="NO" id="9gc-v0-cUb">
+                                <rect key="frame" x="180" y="148" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="908-te-dnr"/>
+                                    <constraint firstAttribute="width" constant="240" id="LYd-1I-t1t"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jqc-sR-jCH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="3H2-0o-LAu"/>
+                            <constraint firstItem="jqc-sR-jCH" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="31" id="5gG-WZ-qBI"/>
+                            <constraint firstItem="oE0-Ph-XBf" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="B59-ia-ctl"/>
+                            <constraint firstItem="oE0-Ph-XBf" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="P9g-cl-cVE"/>
+                            <constraint firstAttribute="trailing" secondItem="oE0-Ph-XBf" secondAttribute="trailing" id="Ppm-v9-fVP"/>
+                            <constraint firstItem="n4r-bd-Fff" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Rfn-Ip-Hpf"/>
+                            <constraint firstItem="n4r-bd-Fff" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="bfF-HG-v37"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="n4r-bd-Fff" secondAttribute="bottom" id="f1v-eP-bPH"/>
+                            <constraint firstAttribute="trailing" secondItem="n4r-bd-Fff" secondAttribute="trailing" id="hKM-1Q-Tba"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="oE0-Ph-XBf" secondAttribute="bottom" id="pM7-oQ-i7h"/>
+                            <constraint firstItem="9gc-v0-cUb" firstAttribute="top" secondItem="jqc-sR-jCH" secondAttribute="bottom" constant="42" id="sUR-83-tqM"/>
+                            <constraint firstItem="9gc-v0-cUb" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="wpQ-O3-gPZ"/>
+                            <constraint firstAttribute="trailing" secondItem="n4r-bd-Fff" secondAttribute="trailing" id="xaS-vL-Y41"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="n4r-bd-Fff" secondAttribute="bottom" id="xsB-P9-gHA"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="25" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Retro-Calc" width="755" height="111"/>
+        <image name="launchbg" width="1433" height="957"/>
+        <image name="launchground" width="999" height="225"/>
+        <image name="robot" width="786" height="402"/>
+    </resources>
 </document>
